# gitbook_worker

./: .dockerignore  AGENTS.md  Dockerfile  README.md  mycli.py
.github/workflows/: ci.yml
gitbook_worker/: README.md  pyproject.toml
gitbook_worker/docs/: conf.py  index.rst
gitbook_worker/docs/api/: gitbook_worker.rst  modules.rst
gitbook_worker/src/gitbook_worker/: Dockerfile  __init__.py  __main__.py  ai_tools.py  docker_cli.py  docker_tools.py  landscape.lua  linkcheck.py  no-longtable.lua  pandoc_utils.py  repo.py  source_extract.py  utils.py
gitbook_worker/tests/: conftest.py  test_additional.py  test_cli.py  test_core_functions.py  test_docker_tools.py  test_download_images.py  test_emoji_report.py  test_external_repair.py  test_header.py  test_more_functions.py  test_new_quality.py  test_pandoc_utils.py  test_quality_checks.py  test_repo.py  test_sources.py  test_utils.py  test_validate_tables.py  test_wide_tables.py  test_worker.py
